--- a/styles.css
+++ b/styles.css
@@ -1,79 +1,220 @@
-:root {
-    --primary: #FEDD00;;
-    --black: #333333;
-    --width-break: 600px;
-}
-
-main {
-    margin: auto;
-    padding: 2rem;
-    max-width: var(--width-break);
-}
-
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@1,300;1,400&display=swap');
 
 body {
-    margin: 0;
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Square Peg', cursive;
-    color: #333333;
+  font-family: 'Cormorant Infant', serif;
+  margin: 0px;
+  
+  width: 100vw;
+  height: 100vh;
 }
 
+
+#container {
+  width: 100%;
+  /*height: 100vh;*/
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+#navbar {
+  display: flex;
+  min-height: 10vh;
+  width: 100%;
+  background-color: #FEDD00;
+  margin-top: 0px;
+  text-align: center;
+  /* padding: 20px; */
+  font-size: 25px;
+  justify-content: center;
+  align-items: center; 
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  
+}
+
+#main {
+  
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 50%;
+  
+
+}
+
+#btn-translate {
+  border: none;
+  padding: 10px 22px;
+  text-align: center;
+  display: flex;
+  /* margin-left: 325px; */
+  font-weight: bold;
+  font-family: 'Cormorant Infant', serif;
+  font-size: 20px;
+  background-color: #FEDD00;
+  text-align: center;
+ 
+}
+
+
+
+#wrapper {
+  font-size: 22px; 
+  /* margin-left: 325px; */
+  font-weight: bold;
+  padding-top: 10px;
+  
+  
+
+  
+}
 
 textarea {
-    box-sizing: border-box;
-    display: block;
-    width: 100%;
-    min-height: 20vh;
-    margin-top: 2rem;
-    font-size: large;
-    font-family: inherit;
-    
+  display: flex;
+  width: 50vw;
+  display: block;
+  height: 10vh;
+  margin: 7vh;
+  /*padding: 15px;*/
+  margin-left: auto;
+  margin-right: auto;
 }
 
-
-button {
-    background-color: var(--primary);
-    border: none;
-    margin: 1rem 0rem;
-    padding: 1rem 2rem;
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Square Peg', cursive;
-    font-size: large;
-}
-
-element.style {
-    padding: 1rem;
-    font-size: large;
+#text-input {
+  font-family: 'Cormorant Infant', serif;
+  font-size: 15px;
+  font-weight: bold;
 }
 
 #output {
+  display: flex;
+  width: 50vw;
+  border: 1px solid black;
+  height: 14vh;
+  margin: 5vh;
+  
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+#footer {
+  height: 12vh;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  position: absolute;
+  display: flex;
+  background-color: #FEDD00;
+  color: black;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  justify-content: center;
+  align-items: center; 
+}
+
+
+
+
+
+@media only screen and (max-width: 700px) {
+
+  #container {
+    width: 100vw;
+    /*height: 80vh;*/
     box-sizing: border-box;
+    overflow: hidden;
+  }
+  #navbar {
+    display: flex;
+    min-height: 8vh;
     width: 100%;
-    min-height: 20vh;
-    max-height: 20vh;
-    border: 1px solid var(--black);
-}
-
-nav {
-    background-color: var(--primary);
+    background-color: #FEDD00;
+    margin-top: 0px;
     text-align: center;
-}
+    /*padding-top: 20px;*/
+    font-size: 16px;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 
+  }
 
-* {
-    box-sizing: border-box;
-}
-div {
+  #main {
+  
+    margin-left: auto;
+    margin-right: auto;
     display: block;
-}
-/** footer **/
-footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    padding: 1rem;
-    background-color: var(--primary);
+    width: 50%;
+  }  
+
+  textarea {
+    width: 50vw;
+    /*display: block;*/
+    display: flex;
+    height: 3vh;
+    margin: 5vh;
+    /*padding: 15px;*/
+    padding: 2vh;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #text-input {
+    font-family: 'Cormorant Infant', serif;
+    font-size: 12px;
+    font-weight: bold;
+  }
+
+  #btn-translate {
+    border: none;
+    padding: 8px 14px;
     text-align: center;
+    display: flex;
+    /*display: inline-block;*/
+    /* margin-left: 85px; */
+    font-weight: bold;
+    font-family: 'Cormorant Infant', serif;
+    font-size: 12px;
+    background-color: #FEDD00;
+  
+  }
+ 
 
+  #wrapper {
+    font-size: 13px; 
+    /* margin-left: 85px; */
+    font-weight: bold;
+    padding-top: 1vh;
+    
+    
+
+  }
+
+  #output {
+    width: 50%;
+    border: 1px solid black;
+    height: 8vh;
+    margin: 4vh;
+    /*padding: 1vw;*/
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #footer {
+   height: 8vh;
+   position: absolute;
+   display: flex;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: #FEDD00;
+   color: black;
+   font-size: 12px;
+   text-align: center;
+   justify-content: center;
+   align-items: center;
+   font-weight: bold;
+   font-family: 'Cormorant Infant', serif;
+   
+  }
 }
-
